# cmake_mini_example

./: CMakeLists.txt  README.md  main.cpp
moduleA/: CMakeLists.txt  Makefile
moduleA/include/: a.h
moduleA/src/: a.cpp
moduleB/: CMakeLists.txt  b.cpp
moduleB/b/: CMakeCache.txt  Makefile  cmake_install.cmake
moduleB/include/: b.h
